# sel4bench

./: easy-settings.cmake  settings.cmake
apps/ipc/src/: main.c
apps/irqcold/: CMakeLists.txt
apps/irqcold/src/: main.c
apps/irquser/: CMakeLists.txt
apps/irquser/src/: main.c
apps/sel4bench/: CMakeLists.txt
apps/sel4bench/src/: benchmark.h  ipc.c  irq.c  main.c  signal.c
apps/signal/: CMakeLists.txt
apps/signal/src/: main.c
libsel4benchsupport/arch_include/arm/arch/: signal.h
libsel4benchsupport/include/: benchmark.h  ipc.h  irq.h
libsel4benchsupport/include/sel4benchsupport/: signal.h
